fix: flaoting display spacing on internal page

--- a/src/extension/contentscript/gleitzeitkonto-browser.css
+++ b/src/extension/contentscript/gleitzeitkonto-browser.css
@@ -97,7 +97,7 @@
 }
 
 .floating-display.internal {
-    right: 9rem;
+    right: 6rem;
 }
 
 .floating-display.external {
